[package]
name                    = "workunits"
# TODO: what to set this at?
# rust-version            = "1.70"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true

keywords.workspace      = true
categories.workspace    = true
homepage.workspace      = true
repository.workspace    = true
description             = "A facility for subprocess tracing and output teeing."

[dependencies]
async-trait             = "0.1"
bytes                   = "1.4"
displaydoc              = "0.2.4"
indexmap                = "2"
log                     = "0.4.20"
parking_lot             = "0.12"
uuid                    = { version = "1.4", features = ["v4", "fast-rng"] }
